--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
-
+    viewBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.example.fragmentbackstack"
         minSdkVersion 19
@@ -31,4 +33,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // 底部导航
+    implementation 'com.google.android.material:material:1.2.0-alpha03'
 }
